EciAdsl - Driver for USB ADSL modems with Globespan chipset
===========================================================

ChangeLog - updated on 2004-04-23 by FlashCode <flashcode@flashtux.org>


Version 0.10 (under dev!):
   * renamed scripts (with "eciadsl-" prefix)

Version 0.9 (2004-04-04):
   * 2.6 kernels support
   * new providers
   * new modems

Version 0.8 (2003-08-01):
   * stability bug fixed
   * new providers
   * new modems

Version 0.7 (2003-03-26):
   * many bugs fixed
   * updated doc & FAQ
   * Debian package

Version 0.6 (2002-12-25):
   * 27 new supported modems
   * many ppp modes
   * new configuration/compilation/installation scripts
   * text configuration tool (eciconftxt.sh)
   * many bugs fixed
   * updated doc & FAQ (online FAQ page)

Version 0.5 (2002-05-15):
   * graphical config tool (eciconf.sh)
   * bugs fixed

Version 0.4 (2002-02-23):
   * bugs fixed

Version 0.3 (2001-12-24):
   * bugs fixed

Version 0.2 (2001-12-14):
   * bugs fixed

Version 0.1 (2001-12-05):
   * first EciAdsl version